# rs-mailserver

./: Cargo.toml  README.md
src/: main.rs  smtp_server.rs
src/mailsender/: mod.rs  smtp_sender.rs
src/mailserver/: email.rs  mod.rs  smtp_server.rs
src/redis/: redis_storage.rs
