[package]
name = "rs-mailserver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tokio-util = "0.7.11"
email_address = "0.2.7"
redis = { version = "0.26.1", features = ["tokio-comp"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
